<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="215dp"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                android:text="@string/mi_perfil_personal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.149"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nombreInp"
                android:layout_width="0dp"
                android:layout_height="89dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintWidth_percent="0.9" />

            <EditText
                android:id="@+id/emailInp"
                android:layout_width="0dp"
                android:layout_height="89dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/apellidosInp"
                app:layout_constraintStart_toStartOf="@+id/apellidosInp"
                app:layout_constraintTop_toBottomOf="@+id/apellidosInp"
                app:layout_constraintWidth_percent="0.9" />

            <EditText
                android:id="@+id/apellidosInp"
                android:layout_width="0dp"
                android:layout_height="89dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/apellidos"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/nombreInp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/nombreInp"
                app:layout_constraintTop_toBottomOf="@+id/nombreInp"
                app:layout_constraintWidth_percent="0.9" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen_de_avatar_rufus"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="0.418"
                app:srcCompat="@mipmap/avatar_foreground" />

            <TextView
                android:id="@+id/txtEligeSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/elige_el_sexo"
                app:layout_constraintEnd_toEndOf="@+id/emailInp"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="@+id/emailInp"
                app:layout_constraintTop_toBottomOf="@+id/emailInp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="365dp"
                android:layout_height="120dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/txtEligeSexo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtEligeSexo"
                app:layout_constraintTop_toBottomOf="@+id/txtEligeSexo">

                <RadioButton
                    android:id="@+id/rBMasc"
                    android:layout_width="159dp"
                    android:layout_height="91dp"
                    android:layout_weight="1"
                    android:text="@string/masculino" />

                <RadioButton
                    android:id="@+id/rbFem"
                    android:layout_width="150dp"
                    android:layout_height="88dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/femenino" />

                <RadioButton
                    android:id="@+id/rBOtro"
                    android:layout_width="134dp"
                    android:layout_height="93dp"
                    android:layout_weight="1"
                    android:text="@string/otro" />

            </RadioGroup>

            <Spinner
                android:id="@+id/spinnerPaises"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pais_de_origen"
                app:layout_constraintEnd_toStartOf="@+id/spinnerPaises"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="280dp"
                android:text="TextView"
                app:layout_constraintTop_toBottomOf="@+id/spinnerPaises"
                tools:layout_editor_absoluteX="183dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>